fix(components/{general-panel,screenshot-panel}): add transition in screenshot panel buttons + align bookmarks to right in general panel

--- a/src/components/from-navigator/general-panel.css
+++ b/src/components/from-navigator/general-panel.css
@@ -51,7 +51,8 @@
   border: none !important;
 }
 
-#nav-bar-customization-target {
+#nav-bar-customization-target,
+#PlacesToolbarItems {
   display: flex !important;
   justify-content: end;
 }
